initcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "MYAPP"
  namespace: default
  labels:
    app: "MYAPP"
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
      - name:  nginx
        port:  80
        protocol: TCP
