pod_security.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security
spec:
  containers:
    image: ubuntu
    name: ubuntu
    securityContext: 
      runAsUser: 1000
      capabilities:
        add: ["MAC_ADMIN"]
